[package]
name = "lexe-api"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "common/test-utils",
  "lexe-api-core/test-utils",
  "lexe-tls/test-utils",
  "dep:proptest",
  "dep:proptest-derive",
]

[dependencies]

# --- LEXE --- #

byte-array.path = "../byte-array"
common.path = "../common"
lexe-api-core = { path = "../lexe-api-core", features = ["axum", "reqwest"] }
lexe-std.path = "../lexe-std"
lexe-tls.path = "../lexe-tls"
lexe-tokio.path = "../lexe-tokio"

# --- WORKSPACE --- #

anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["json", "query"] }
axum-server.workspace = true
bcs.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "http2", "server"] }
lightning.workspace = true
rand_core.workspace = true
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [] }
tower = { workspace = true, features = ["buffer", "limit", "load-shed", "timeout", "util"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true

# --- OPTIONAL --- #
# These must have `optional = true` to prevent infecting production binaries.

proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }

[dev-dependencies]
axum.workspace = true
common = { path = "../common", features = ["test-utils"] }
proptest = { workspace = true, features = ["alloc"] }
proptest-derive.workspace = true
tokio = { workspace = true, features = [
    "test-util",
    "time"
] }
