[package]
name = "lexe-api"
version = "0.1.4"
license = "MIT"
description = "Lexe API types, definitions, client/server utils, and TLS config"
documentation = "https://docs.rs/lexe-api"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "dep:proptest",
  "dep:proptest-derive",
  "lexe-api-core/test-utils",
  "lexe-common/test-utils",
  "lexe-tls/test-utils",
]

[dependencies]

# --- LEXE --- #

lexe-api-core = { workspace = true, features = ["axum", "reqwest"] }
lexe-common = { workspace = true }
lexe-crypto = { workspace = true }
lexe-std = { workspace = true }
lexe-tls = { workspace = true }
lexe-tokio = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "query"] }
axum-server = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "http2", "server"] }
lightning = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [] }
tower = { workspace = true, features = ["buffer", "limit", "load-shed", "timeout", "util"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }

# --- OPTIONAL --- #
# These must have `optional = true` to prevent infecting production binaries.

proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }

[dev-dependencies]
lexe-common = { workspace = true, features = ["test-utils"] }

axum = { workspace = true }
proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
tokio = { workspace = true, features = [
    "test-util",
    "time"
] }
