[package]
name = "lexe-byte-array"
version = "0.1.3"
license = "MIT"
description = "Byte array newtype trait"
documentation = "https://docs.rs/lexe-byte-array"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]

# --- LEXE --- #

lexe-hex = { workspace = true }
