[package]
name = "lexe-cli"
authors = { workspace = true }
edition = { workspace = true }
license = "MIT"
version = "0.1.10"

[[bin]]
name = "lexe"
path = "src/main.rs"

[dependencies]

# --- LEXE --- #

# NOTE: Try not to enable the `lexe` crate's `unstable` feature. If you really
# need to do so, maybe that functionality should be exposed in the Rust SDK?
lexe = { workspace = true }
lexe-common = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
# clap features:
# - std: required for most functionality
# - derive: Derive macros for `Parser`, `Subcommand`, `ValueEnum`
# - env: #[arg(env = "MY_VARIABLE")] to read args from env vars
# - error-context: Displays "invalid value 'yeet' for '--network'" vs
#   "one of the values isn't valid for an argument" without the arg
# - help: --help output, #[command(about=...)], #[command(long_about=...)]
# - usage: Auto-generates "Usage: <command> [OPTIONS]" in --help output
clap = { workspace = true, features = [
    "std", "derive", "env", "error-context", "help", "usage",
] }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
