[package]
name = "lexe-cli"
authors = { workspace = true }
edition = { workspace = true }
license = "MIT"
version = "0.1.19"

[[bin]]
name = "lexe"
path = "src/main.rs"
doc = false

[dependencies]

# --- LEXE --- #

# NOTE: Try not to enable the `lexe` crate's `unstable` feature. If you really
# need to do so, maybe that functionality should be exposed in the Rust SDK?
lexe = { workspace = true, features = ["unstable"] }
lexe-common = { workspace = true }
lexe-qr = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
lexe-payment-uri-core = { workspace = true, features = ["test-utils"] }

proptest = { workspace = true }
