[package]
name = "lexe-crypto"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[features]
# Explicitly specify that no features should be enabled by default.
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
    "dep:proptest",
]

[dependencies]

# --- LEXE --- #

# --- WORKSPACE --- #

rand_core = { workspace = true }
ring = { workspace = true }

# --- OPTIONAL --- #

proptest = { workspace = true, optional = true, features = ["alloc"] }

[dev-dependencies]
proptest = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true }
