[package]
name = "lexe-crypto"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[features]
# Explicitly specify that no features should be enabled by default.
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
    "dep:proptest",
]

[dependencies]

# --- LEXE --- #

lexe-byte-array = { path = "../lexe-byte-array" }
lexe-hex = { path = "../lexe-hex" }
lexe-serde = { path = "../lexe-serde" }
lexe-sha256 = { path = "../lexe-sha256" }
lexe-std = { path = "../lexe-std" }

# --- WORKSPACE --- #

# TODO(phlip9): figure out how to remove this dep
bcs = { workspace = true }
rand_core = { workspace = true }
# TODO(phlip9): figure out how to remove this dep
ref-cast = { workspace = true }
ring = { workspace = true }
serde_core = { workspace = true }
zeroize = { workspace = true }

# --- OPTIONAL --- #

proptest = { workspace = true, optional = true, features = ["alloc"] }

[dev-dependencies]
proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
