[package]
name = "lexe-crypto"
version = "0.1.1"
license = "MIT"
description = "Lexe cryptography library (ring wrapper)"
documentation = "https://docs.rs/lexe-crypto"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[features]
# Explicitly specify that no features should be enabled by default.
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
    "dep:proptest",
]

[dependencies]

# --- LEXE --- #

lexe-byte-array = { workspace = true }
lexe-hex = { workspace = true }
lexe-serde = { workspace = true }
lexe-sha256 = { workspace = true }
lexe-std = { workspace = true }

# --- WORKSPACE --- #

# TODO(phlip9): figure out how to remove this dep
bcs = { workspace = true }
rand_core = { workspace = true }
# TODO(phlip9): figure out how to remove this dep
ref-cast = { workspace = true }
ring = { workspace = true }
serde_core = { workspace = true }
zeroize = { workspace = true }

# --- OPTIONAL --- #

proptest = { workspace = true, optional = true, features = ["alloc"] }

[dev-dependencies]
proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
