[package]
name = "lexe-enclave"
version = "0.1.3"
license = "MIT"
description = "Lexe Intel SGX enclave types and platform functions"
documentation = "https://docs.rs/lexe-enclave"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[features]
# Explicitly specify that no features should be enabled by default.
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
    "dep:proptest",
    "dep:proptest-derive",
]

[dependencies]

# --- LEXE --- #

lexe-byte-array = { workspace = true }
lexe-hex = { workspace = true }
lexe-serde = { workspace = true }
lexe-sha256 = { workspace = true }
lexe-std = { workspace = true, features = ["ref-cast"] }

# --- WORKSPACE --- #

cfg-if = { workspace = true }
ref-cast = { workspace = true }
ring = { workspace = true }
sgx-isa = { workspace = true }

# --- OPTIONAL --- #

proptest = { workspace = true, optional = true, features = ["alloc"] }
proptest-derive = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
serde_core = { workspace = true }
serde_json = { workspace = true }
