[package]
name = "lexe-hex"
license = "MIT"
authors.workspace = true
edition.workspace = true
version.workspace = true
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]

[dev-dependencies]
proptest = { workspace = true, features = ["alloc"] }

[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
# Include std impls when testing outside of SGX
proptest = { workspace = true, features = ["std"] }
