[package]
name = "lexe-ln"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = ["common/test-utils", "lexe-api/test-utils"]

[dependencies]

# --- LEXE --- #

common.path = "../common"
const-utils.path = "../const-utils"
hex.path = "../hex"
lexe-api.path = "../lexe-api"
lexe-tokio.path = "../lexe-tokio"

# --- WORKSPACE --- #

anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
base64.workspace = true
bdk_wallet.workspace = true
bdk_chain.workspace = true
bdk_esplora.workspace = true
bech32.workspace = true
bitcoin.workspace = true
bitcoin-bech32.workspace = true
bitcoin_hashes.workspace = true
cfg-if.workspace = true
either.workspace = true
esplora-client.workspace = true
futures.workspace = true
lightning.workspace = true
lightning-invoice.workspace = true
lightning-transaction-sync.workspace = true
miniscript.workspace = true
rand.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
secrecy.workspace = true
semver.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["alloc", "hex"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
    "time"
] }
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber = { workspace = true, features = [
    # Enable colored log outputs
    "ansi",
    "fmt",
    "registry",
    "std",
    "tracing-log",
] }
webpki-roots.workspace = true

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
lexe-api = { path = "../lexe-api", features = ["test-utils"] }

proptest = { workspace = true, features = ["alloc"] }
proptest-derive.workspace = true
strum.workspace = true
# Enable test-util feature in tests
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "test-util",
    "time"
] }
# Utilities for testing futures
tokio-test.workspace = true
