[package]
name = "lexe-ln"
license = "PolyForm-Noncommercial-1.0.0"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
publish = false

# Config for testing in SGX
# Need more threads for tokio. See: lexe-common/Cargo.toml.
# Need more stack and heap for LN router tests...
# TODO(phlip9): why is router allocating 150MiB heap and 4MiB stack for
# routing on a simple 1 node graph?
[package.metadata.fortanix-sgx]
stack-size = 0x40_0000 # 4 MiB
heap-size = 0x1000_0000 # 256 MiB
threads = 4

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
    "lexe-api/test-utils",
    "lexe-common/test-utils",
]

[dependencies]

# --- LEXE --- #

lexe-api = { path = "../lexe-api" }
lexe-common = { path = "../lexe-common" }
lexe-enclave-core = { path = "../lexe-enclave-core" }
lexe-hex = { path = "../lexe-hex" }
lexe-std = { path = "../lexe-std" }
lexe-tls = { path = "../lexe-tls" }
lexe-tls-core = { path = "../lexe-tls-core", features = ["webpki-roots"] }
lexe-tokio = { path = "../lexe-tokio" }

# --- WORKSPACE --- #

anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bdk_chain = { workspace = true }
bdk_esplora = { workspace = true }
bdk_wallet = { workspace = true }
bech32 = { workspace = true }
bitcoin = { workspace = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
either = { workspace = true }
esplora-client = { workspace = true }
futures = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
lightning-transaction-sync = { workspace = true }
miniscript = { workspace = true }
quick_cache = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
secrecy = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["alloc", "hex"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
    "time"
] }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    # Enable colored log outputs
    "ansi",
    "fmt",
    "registry",
    "std",
    "tracing-log",
] }
webpki-roots = { workspace = true }

[dev-dependencies]
lexe-api = { path = "../lexe-api", features = ["test-utils"] }
lexe-common = { path = "../lexe-common", features = ["test-utils"] }

bcs = { workspace = true }
proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
strum = { workspace = true }
# Enable test-util feature in tests
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "test-util",
    "time"
] }
# Utilities for testing futures
tokio-test = { workspace = true }
