[package]
name = "lexe-logger"
version = "0.1.3"
license = "MIT"
description = "Lexe SDK tracing logger configuration"
documentation = "https://docs.rs/lexe-logger"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = ["lexe-api/test-utils"]

[dependencies]

# --- LEXE --- #

lexe-api = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    # Enable colored log outputs
    "ansi",
    "fmt",
    "registry",
    "std",
    "tracing-log",
] }

[dev-dependencies]
# Enable lexe-api test-utils in tests
lexe-api = { workspace = true, features = ["test-utils"] }
