[package]
name = "lexe-node-client"
version = "0.1.0"
license = "MIT"
description = "Client types used to connect to your Lexe Node"
documentation = "https://docs.rs/lexe-node-client"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

[features]
default = []
test-utils = ["proptest-derive"]

[dependencies]

# --- LEXE --- #

lexe-api = { path = "../lexe-api" }
lexe-common = { path = "../lexe-common" }
lexe-crypto = { path = "../lexe-crypto" }
lexe-enclave = { path = "../lexe-enclave" }
lexe-tls = { path = "../lexe-tls" }

# --- WORKSPACE --- #

anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# --- OPTIONAL --- #

proptest-derive = { workspace = true, optional = true }

[dev-dependencies]
lexe-common = { path = "../lexe-common", features = ["test-utils"] }
lexe-tls = { path = "../lexe-tls", features = ["test-utils"] }

proptest = { workspace = true }
proptest-derive = { workspace = true }
