[package]
name = "lexe-node-client"
version = "0.1.2"
license = "MIT"
description = "Client types used to connect to your Lexe Node"
documentation = "https://docs.rs/lexe-node-client"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
exclude = [
    "/test_data"
]
publish = true

[features]
default = []
test-utils = ["proptest-derive"]

[dependencies]

# --- LEXE --- #

lexe-api = { workspace = true }
lexe-common = { workspace = true }
lexe-crypto = { workspace = true }
lexe-enclave = { workspace = true }
lexe-tls = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# --- OPTIONAL --- #

proptest-derive = { workspace = true, optional = true }

[dev-dependencies]
lexe-common = { workspace = true, features = ["test-utils"] }
lexe-tls = { workspace = true, features = ["test-utils"] }

proptest = { workspace = true }
proptest-derive = { workspace = true }
