[package]
name = "lexe-payment-uri-core"
version = "0.1.14"
license = "MIT"
description = "I/O-free Bitcoin payment URI parsing and encoding"
documentation = "https://docs.rs/lexe-payment-uri-core"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

[dependencies]

# --- LEXE --- #

lexe-api-core = { workspace = true }
lexe-common = { workspace = true }
lexe-crypto = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
bech32 = { workspace = true }
bitcoin = { workspace = true }
cfg-if = { workspace = true }
percent-encoding = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
lexe-api-core = { workspace = true, features = ["test-utils"] }
lexe-common = { workspace = true, features = ["test-utils"] }

proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
