[package]
name = "lexe-payment-uri"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
publish = true

[dependencies]

# --- LEXE --- #

lexe-api-core = { path = "../lexe-api-core" }
lexe-common = { path = "../lexe-common" }
lexe-crypto = { path = "../lexe-crypto" }
lexe-payment-uri-core = { path = "../lexe-payment-uri-core" }
lexe-tls-core = { path = "../lexe-tls-core", features = ["webpki-roots"] }

# --- WORKSPACE --- #

anyhow = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true }
dnssec-prover = { workspace = true, features = ["std", "tokio", "validation"] }
percent-encoding = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

# --- LEXE --- #

lexe-api-core = { path = "../lexe-api-core", features = ["test-utils"] }
lexe-logger = { path = "../lexe-logger", features = ["test-utils"] }
lexe-std = { path = "../lexe-std" }

# --- WORKSPACE --- #

tokio = { workspace = true, features = ["macros", "test-util"] }
