[package]
name = "lexe-payment-uri"
version = "0.1.0"
license = "MIT"
description = "Parse and encode Bitcoin ecosystem payment URIs and strings"
documentation = "https://docs.rs/lexe-payment-uri"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

[dependencies]

# --- LEXE --- #

lexe-api-core = { workspace = true }
lexe-common = { workspace = true }
lexe-crypto = { workspace = true }
lexe-payment-uri-core = { workspace = true }
lexe-tls-core = { workspace = true, features = ["webpki-roots"] }

# --- WORKSPACE --- #

anyhow = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true }
dnssec-prover = { workspace = true, features = ["std", "tokio", "validation"] }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

# --- LEXE --- #

lexe-api-core = { workspace = true, features = ["test-utils"] }
lexe-logger = { workspace = true, features = ["test-utils"] }
lexe-std = { workspace = true }

# --- WORKSPACE --- #

tokio = { workspace = true, features = ["macros", "test-util"] }
