[package]
name = "lexe-serde"
version = "0.1.0"
license = "MIT"
description = "Lexe SDK serde derive helpers"
documentation = "https://docs.rs/lexe-serde"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]

# --- LEXE --- #

lexe-hex = { workspace = true }

# --- WORKSPACE --- #

base64 = { workspace = true }
serde_core = { workspace = true }

# --- OPTIONAL --- #

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
