[package]
name = "lexe-sha256"
license = "MIT"
authors.workspace = true
edition.workspace = true
version.workspace = true
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]

# --- LEXE --- #

byte-array.path = "../byte-array"
hex.path = "../hex"
lexe-std = { path = "../lexe-std", features = ["ref-cast"] }

# --- WORKSPACE --- #

ref-cast.workspace = true
ring.workspace = true
