[package]
name = "lexe-sha256"
version = "0.1.0"
license = "MIT"
description = "Opinionated sha256 hashing via ring"
documentation = "https://docs.rs/lexe-sha256"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]

# --- LEXE --- #

lexe-byte-array = { path = "../lexe-byte-array" }
lexe-std = { path = "../lexe-std", features = ["ref-cast"] }

# --- WORKSPACE --- #

ref-cast = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
lexe-hex = { path = "../lexe-hex" }
