[package]
name = "lexe-sha256"
version = "0.1.2"
license = "MIT"
description = "Opinionated sha256 hashing via ring"
documentation = "https://docs.rs/lexe-sha256"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]

# --- LEXE --- #

lexe-byte-array = { workspace = true }
lexe-std = { workspace = true, features = ["ref-cast"] }

# --- WORKSPACE --- #

ref-cast = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
lexe-hex = { workspace = true }
