[package]
name = "lexe-tls-attest-server"
license = "PolyForm-Noncommercial-1.0.0"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]

# --- LEXE --- #

lexe-common = { path = "../lexe-common" }
lexe-crypto = { path = "../lexe-crypto" }
lexe-enclave = { path = "../lexe-enclave" }
lexe-hex = { path = "../lexe-hex" }
lexe-tls = { path = "../lexe-tls" }
lexe-tls-core = { path = "../lexe-tls-core" }
lexe-sha256 = { path = "../lexe-sha256" }

# --- WORKSPACE --- #

anyhow = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
time = { workspace = true } # TODO(phlip9): audit features

[target.'cfg(target_env = "sgx")'.dependencies]
aes = { workspace = true }
aesm-client = { workspace = true }
bytemuck = { workspace = true }
cmac = { workspace = true }
sgx-isa = { workspace = true }

[dev-dependencies]
lexe-tls = { path = "../lexe-tls", features = ["test-utils"] }

tokio = { workspace = true }
