[package]
name = "lexe-tls-attest-server"
license = "PolyForm-Noncommercial-1.0.0"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]

# --- LEXE --- #

lexe-common = { workspace = true }
lexe-crypto = { workspace = true }
lexe-enclave = { workspace = true }
lexe-hex = { workspace = true }
lexe-tls = { workspace = true }
lexe-tls-core = { workspace = true }
lexe-sha256 = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
time = { workspace = true } # TODO(phlip9): audit features

[target.'cfg(target_env = "sgx")'.dependencies]
aes = { workspace = true }
aesm-client = { workspace = true }
bytemuck = { workspace = true }
cmac = { workspace = true }
sgx-isa = { workspace = true }

[dev-dependencies]
lexe-tls = { workspace = true, features = ["test-utils"] }

tokio = { workspace = true }
