[package]
name = "lexe-tls-core"
version = "0.1.3"
license = "MIT"
description = "Lexe rustls extension crate"
documentation = "https://docs.rs/lexe-tls-core"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[features]
default = []
webpki-roots = ["dep:webpki-roots"]

[dependencies]
# This crate is meant to have minimal dependencies.
# Beyond `rustls`, please only add dependencies behind a feature flag.

# --- LEXE --- #

# --- WORKSPACE --- #

rustls = { workspace = true }
rustls-webpki = { workspace = true }

# --- OPTIONAL --- #

webpki-roots = { optional = true, workspace = true }
