[package]
name = "lexe-tls"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "common/test-utils",
  "dep:proptest",
  "dep:proptest-derive",
  "dep:tokio-rustls",
]

[dependencies]

# --- LEXE --- #

byte-array.path = "../byte-array"
common.path = "../common"
hex.path = "../hex"
sha256.path = "../sha256"

# --- WORKSPACE --- #

anyhow.workspace = true
asn1-rs.workspace = true
dcap-ql.workspace = true
num-bigint.workspace = true
rcgen.workspace = true
ring.workspace = true
rustls-pemfile.workspace = true
rustls-webpki.workspace = true
rustls.workspace = true
secrecy.workspace = true
serde.workspace = true
sgx-isa.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["time"] }
webpki.workspace = true
webpki-roots.workspace = true
x509-parser.workspace = true
yasna.workspace = true

# --- OPTIONAL --- #
# These must have `optional = true` to prevent infecting production binaries.

proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }
tokio-rustls = { optional = true, workspace = true }

[target.'cfg(target_env = "sgx")'.dependencies]
aes.workspace = true
aesm-client.workspace = true
bytemuck.workspace = true
cmac.workspace = true

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
proptest = { workspace = true, features = ["alloc"] }
proptest-derive.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "test-util"] }
tokio-rustls.workspace = true
